item_5548 fixing TU

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -741,7 +741,7 @@ CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.TOO_MANY_VERSION_BY_USAGE.KO=Le bordereau
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.NOT_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ATTACHMENT_REQUIRED.KO=Le contrat d''entrée requiert un rattachement à au moins une unité archivistique
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le rattachement n''est pas situé dans le périmètre autorisé
-CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO="le rattachement n'a pas été effectué: le contrat d''entrée n''autorise pas les rattachements."
+CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO="le rattachement n''a pas été effectué: le contrat d''entrée n''autorise pas les rattachements."
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.INVALID_GUID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement est incorrect
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.MODIFY_PARENT_EXISTING_UNIT_UNAUTHORIZED.KO=Le rattachement n''a pas été effectué: impossibilité de rattacher une unité archivistique existante à une unité archivistique parente
 
@@ -751,7 +751,7 @@ CHECK_DATAOBJECTPACKAGE.TOO_MANY_VERSION_BY_USAGE.KO=Le bordereau de transfert p
 CHECK_DATAOBJECTPACKAGE.NOT_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
 CHECK_DATAOBJECTPACKAGE.ATTACHMENT_REQUIRED.KO=Le contrat d''entrée requiert un rattachement à au moins une unité archivistique
 CHECK_DATAOBJECTPACKAGE.UNAUTHORIZED_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le rattachement n''est pas situé dans le périmètre autorisé
-CHECK_DATAOBJECTPACKAGE.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO=le rattachement n'a pas été effectué: le contrat d''entrée n''autorise pas les rattachements.
+CHECK_DATAOBJECTPACKAGE.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO=le rattachement n''a pas été effectué: le contrat d''entrée n''autorise pas les rattachements.
 CHECK_DATAOBJECTPACKAGE.INVALID_GUID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement est incorrect
 CHECK_DATAOBJECTPACKAGE.MODIFY_PARENT_EXISTING_UNIT_UNAUTHORIZED.KO=Le rattachement n''a pas été effectué: impossibilité de rattacher une unité archivistique existante à une unité archivistique parente
 
