--- a/doc/fr/migration/updates/releases_updates/r7_to_r8/1.4.1_to_1.10.3.rst
+++ b/doc/fr/migration/updates/releases_updates/r7_to_r8/1.4.1_to_1.10.3.rst
@@ -1,7 +1,7 @@
 Montée de version 1.4.1 vers 1.10.3
 ###################################
 
-.. caution:: La migration doit être réalisée en partant de la version la plus récente de la version « R7 » (1.4.12).
+.. caution:: Il est recommandé de réaliser la migration en respectant les chemins de montées de version jusqu'à la dernière version « R7 » disponible, à savoir la version « R7.15 » (1.4.15) lors de la publication du présent document.
 
 Montée de version 1.4.1 vers 1.4.5
 ==================================
@@ -13,12 +13,7 @@ Montée de version 1.4.5 vers 1.4.9
 
 Se référer au chapitre :ref:`1.4.5_to_1.4.9`.
 
-Montée de version 1.4.9 vers 1.4.12
+Montée de version 1.4.9 vers 1.10.3
 ===================================
 
-Se référer au chapitre :ref:`1.4.9_to_1.4.12`.
-
-Montée de version 1.4.12 vers 1.10.3
-====================================
-
-Se référer au chapitre :ref:`1.4.12_to_1.10.3`.
+Se référer au chapitre :ref:`1.4.9_to_1.10.3`. 
