--- a/doc/fr/migration/updates/releases_updates/r6_to_r7/1.0.0_to_1.4.9.rst
+++ b/doc/fr/migration/updates/releases_updates/r6_to_r7/1.0.0_to_1.4.9.rst
@@ -1,7 +1,7 @@
-Montée de version 1.0.0 vers 1.4.12
+Montée de version 1.0.0 vers 1.4.9
 ###################################
 
-.. caution:: La migration doit être réalisée en partant de la version la plus récente de la version « R6 » (1.0.13).
+.. caution:: Il est recommandé de réaliser la migration en respectant les chemins de montées de version jusqu'à la dernière version « R6 » disponible, à savoir la version « R6.13 » (1.0.13) lors de la publication du présent document.
 
 Montée de version 1.0.0 vers 1.0.4
 ==================================
@@ -18,7 +18,7 @@ Montée de version 1.0.9 vers 1.0.13
 
 Se référer au chapitre :ref:`1.0.9_to_1.0.13`.
 
-Montée de version 1.0.13 vers 1.4.12
+Montée de version 1.0.13 vers 1.4.9
 ====================================
 
-Se référer au chapitre :ref:`1.0.13_to_1.4.12`.
+Se référer au chapitre :ref:`1.0.13_to_1.4.9`.
