item 5747 : messages properties update

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -97,10 +97,7 @@ STP_DELETE_MASTERDATA_GRIFFIN.WARNING=Avertissement lors du processus de suppres
 
 STP_DELETE_MASTERDATA_PRESERVATION_SCENARIO.OK=Succès du processus de suppression du référentiel des scénarios de préservation
 STP_DELETE_MASTERDATA_PRESERVATION_SCENARIO=Processus de suppression du référentiel des scénarios de préservation
-STP_DELETE_MASTERDATA_PRESERVATION_SCENARIO.KO=Echec du processus de suppression du référentiel des scénarios de préservation
-STP_DELETE_MASTERDATA_PRESERVATION_SCENARIO.STARTED=Début du processus de suppression du référentiel des scénarios de préservation
-STP_DELETE_MASTERDATA_PRESERVATION_SCENARIO.WARNING=Avertissement lors du processus de suppression du référentiel des scénarios de préservation
-STP_DELETE_MASTERDATA_PRESERVATION_SCENARIO.FATAL=Erreur technique lors du processus de suppression du référentiel des scénarios de préservation
+
 
 
 SCENARIO_REPORT=Processus de génération du rapport d''import du référentiel des scénarios de préservation
@@ -113,8 +110,8 @@ SCENARIO_REPORT.WARNING=Avertissement lors du processus de génération du rappo
 STP_IMPORT_PRESERVATION_SCENARIO.STARTED=Début du processus d''import du référentiel des scénarios de préservation
 STP_IMPORT_PRESERVATION_SCENARIO=Processus d''import du référentiel des scénarios de préservation
 STP_BACKUP_SCENARIO.OK=Succès du processus de sauvegarde des scénarios de préservation
+SCENARIO_REPORT.OK=Succès de la génération du rapport d''import du référentiel des scénarios de préservation
 STP_IMPORT_PRESERVATION_SCENARIO.OK=Succès du processus d''import du référentiel des scénarios de préservation
-STP_IMPORT_PRESERVATION_SCENARIO.KO=Échec du processus d''import du référentiel des scenarios de preservation
 
 STP_PERSONAL_CERTIFICATE_CHECK=Processus de vérification du certificat personnel
 STP_PERSONAL_CERTIFICATE_CHECK.OK=Succès du processus de vérification du certificat personnel
@@ -126,11 +123,6 @@ STP_BACKUP_GRIFFIN.OK=Succès du processus de sauvegarde des griffons
 STP_BACKUP_GRIFFIN.KO=Échec du processus de sauvegarde des griffons
 STP_BACKUP_GRIFFIN.FATAL=Erreur technique lors du processus de sauvegarde des griffons
 
-STP_IMPORT_GRIFFIN=Processus d''import du référentiel des griffons
-STP_IMPORT_GRIFFIN.STARTED=Début du processus d''import du référentiel des griffons
-STP_IMPORT_GRIFFIN.OK=Succès du processus d''import du référentiel des griffons
-STP_IMPORT_GRIFFIN.KO=Échec du processus d''import du référentiel des griffons
-STP_IMPORT_GRIFFIN.WARNING=Avertissement lors du processus d''import du référentiel des griffons
 
 IMPORT_GRIFFIN=Processus d''import du référentiel des griffons
 IMPORT_GRIFFIN.STARTED=Début du processus d''import du référentiel des griffons
@@ -148,6 +140,7 @@ GRIFFIN_REPORT.FATAL=Erreur technique lors de la génération du rapport d''impo
 
 
 STP_BACKUP_SCENARIO=Processus de sauvegarde des griffons
+STP_BACKUP_SCENARIO.OK=Succès du processus de sauvegarde des griffons
 STP_BACKUP_SCENARIO.KO=Échec du processus de sauvegarde des griffons
 STP_BACKUP_SCENARIO.FATAL=Erreur technique lors du processus de sauvegarde des griffons
 
@@ -608,6 +601,12 @@ STP_DELETE_MASTERDATA_ONTOLOGY.OK=Succès du processus de suppression du référ
 STP_DELETE_MASTERDATA_ONTOLOGY.KO=Échec du processus de suppression du référentiel des ontologies
 STP_DELETE_MASTERDATA_ONTOLOGY.FATAL=Erreur technique lors du processus de suppression du référentiel des ontologies
 
+STP_DELETE_MASTERDATA_ACCESSION_REGISTER_SYMBOLIC=Processus de purge du registre des fonds symboliques
+STP_DELETE_MASTERDATA_ACCESSION_REGISTER_SYMBOLIC.STARTED=Début du processus de purge du registre des fonds symboliques
+STP_DELETE_MASTERDATA_ACCESSION_REGISTER_SYMBOLIC.OK=Succès du processus de purge du registre des fonds symboliques
+STP_DELETE_MASTERDATA_ACCESSION_REGISTER_SYMBOLIC.KO=Echec du processus de purge du registre des fonds symboliques
+STP_DELETE_MASTERDATA_ACCESSION_REGISTER_SYMBOLIC.FATAL=Une erreur technique est survenue lors du processus de purge du registre des fonds symboliques
+
 
 STP_DELETE_ACCESSION_REGISTER_SUMMARY=Processus de suppression du registre des fonds (résumé)
 STP_DELETE_ACCESSION_REGISTER_SUMMARY.STARTED=Début du processus de suppression du registre des fonds (résumé)
@@ -737,21 +736,17 @@ CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_WRONG_ATTACHMENT_LINK.KO=Le bordereau de 
 
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.NULL_LINK_PARENT_ID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le contrat d''entrée ne déclare pas de nœud de rattachement
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.TOO_MANY_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''est pas unique dans le système
-CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.TOO_MANY_VERSION_BY_USAGE.KO=Le bordereau de transfert procède à un rattachement en utilisant des éléments hors périmètre
+CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.TOO_MANY_VERSION_BY_USAGE.KO=Le transfert de plusieurs versions d''un même usage dans un même versement est interdit
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.NOT_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
-CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ATTACHMENT_REQUIRED.KO=Le contrat d''entrée requiert un rattachement à au moins une unité archivistique
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le rattachement n''est pas situé dans le périmètre autorisé
-CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO="le rattachement n''a pas été effectué: le contrat d''entrée n''autorise pas les rattachements."
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.INVALID_GUID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement est incorrect
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.MODIFY_PARENT_EXISTING_UNIT_UNAUTHORIZED.KO=Le rattachement n''a pas été effectué: impossibilité de rattacher une unité archivistique existante à une unité archivistique parente
 
 CHECK_DATAOBJECTPACKAGE.NULL_LINK_PARENT_ID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le contrat d''entrée ne déclare pas de nœud de rattachement
 CHECK_DATAOBJECTPACKAGE.TOO_MANY_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''est pas unique dans le système
-CHECK_DATAOBJECTPACKAGE.TOO_MANY_VERSION_BY_USAGE.KO=Le bordereau de transfert procède à un rattachement en utilisant des éléments hors périmètre
+CHECK_DATAOBJECTPACKAGE.TOO_MANY_VERSION_BY_USAGE.KO=Le transfert de plusieurs versions d''un même usage dans un même versement est interdit
 CHECK_DATAOBJECTPACKAGE.NOT_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
-CHECK_DATAOBJECTPACKAGE.ATTACHMENT_REQUIRED.KO=Le contrat d''entrée requiert un rattachement à au moins une unité archivistique
 CHECK_DATAOBJECTPACKAGE.UNAUTHORIZED_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le rattachement n''est pas situé dans le périmètre autorisé
-CHECK_DATAOBJECTPACKAGE.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO=le rattachement n''a pas été effectué: le contrat d''entrée n''autorise pas les rattachements.
 CHECK_DATAOBJECTPACKAGE.INVALID_GUID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement est incorrect
 CHECK_DATAOBJECTPACKAGE.MODIFY_PARENT_EXISTING_UNIT_UNAUTHORIZED.KO=Le rattachement n''a pas été effectué: impossibilité de rattacher une unité archivistique existante à une unité archivistique parente
 
@@ -1244,6 +1239,13 @@ LFC.PRESERVATION_INDEXATION_METADATA.KO=Échec de l''indexation des métadonnée
 LFC.PRESERVATION_INDEXATION_METADATA.WARNING=Avertissement lors de l''indexation des métadonnées du groupe d''objets
 LFC.PRESERVATION_INDEXATION_METADATA.FATAL=Erreur technique lors de l''indexation des métadonnées du groupe d''objets
 
+LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA=Indexation des métadonnées du groupe d''objets
+LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.STARTED=Début de l''indexation des métadonnées du groupe d''objets
+LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.OK=Succès de l''indexation des métadonnées du groupe d''objets
+LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.KO=Échec de l''indexation des métadonnées du groupe d''objets
+LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.WARNING=Avertissement lors de l''indexation des métadonnées du groupe d''objets
+LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.FATAL=Erreur technique lors de l''indexation des métadonnées du groupe d''objets
+
 LFC.CHECK_DIGEST.CALC_CHECK=Calcul d''une empreinte en SHA-512
 LFC.CHECK_DIGEST.CALC_CHECK.STARTED=Début du calcul d''une empreinte en SHA-512
 LFC.CHECK_DIGEST.CALC_CHECK.OK=Succès du calcul d''une empreinte en SHA-512
@@ -1643,7 +1645,7 @@ UPDATE_UNIT_RULES.FATAL=Erreur technique lors de la mise à jour des règles de 
 
 UPDATE_UNIT_RULES_CHECK_CONSISTENCY.OK=Succès de la vérification de cohérence des actions lors de la mise à jour des règles métadonnées descriptives et de gestion des unités archivistiques
 UPDATE_UNIT_RULES_CONSISTENCY.KO=Échec de la vérification de cohérence des actions lors de la mise à jour des métadonnées descriptives et de gestion des unités archivistiques
-UPDATE_UNIT_RULES_CONSISTENCY.FATAL=Erreur technique lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées descriptives et de gestion des unités archivistiques
+UPDATE_UNIT_RULES_CONSISTENCY.FATAL = Erreur technique lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées descriptives et de gestion des unités archivistiques
 
 
 STP_UPDATE_RUNNING_INGESTS=Processus de mise à jour des entrées en cours
@@ -2393,12 +2395,12 @@ MASS_UPDATE_UNITS_RULES.FATAL=Erreur technique lors de la mise à jour des méta
 MASS_UPDATE_UNITS_RULES.WARNING=Avertissement lors de la mise à jour des métadonnées  de gestion des unités archivistiques
 
 
-EXPORT_PROBATIVE_VALUE=Relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.STARTED=Début de l''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.WARNING=Avertissement lors de l''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.OK=Succès du processus de l''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.KO=Échec du processus de l''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.FATAL=Erreur technique lors de l''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE=Processus d''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.STARTED=Début du processus d''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.WARNING=Avertissement lors du processus d''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.OK=Succès du processus du processus d''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.KO=Échec du processus du processus d''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.FATAL=Erreur technique lors du processus d''export du relevé de valeur probante
 
 STP_PROBATIVE_VALUE_PREPARE=Processus de préparation du relevé de valeur probante
 STP_PROBATIVE_VALUE_PREPARE.STARTED.OK=Début du processus de préparation du relevé de valeur probante
@@ -2454,6 +2456,7 @@ STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE=Extraction des signatures à partir des fic
 STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.OK=Succès de l''extraction des signatures à partir des fichiers sécurisés
 STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.WARNING=Avertissement lors de l''extraction des signatures à partir des fichiers sécurisés
 STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.STARTED=Début de l''extraction des signatures à partir des fichiers sécurisés
+STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.STARTED.OK=Succès du début de l''extraction des signatures à partir des fichiers sécurisés
 STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.KO=Echec de l''extraction des signatures à partir des fichiers sécurisés
 STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.FATAL=Erreur technique lors la préparation de l''extraction des signatures à partir des fichiers sécurisés
 
@@ -2463,6 +2466,10 @@ PROBATIVE_VALUE_EXTRACT_ZIP_FILE.WARNING=Avertissement lors de l''extraction des
 PROBATIVE_VALUE_EXTRACT_ZIP_FILE.STARTED=Début de l''extraction des signatures à partir des fichiers sécurisés
 PROBATIVE_VALUE_EXTRACT_ZIP_FILE.KO=Echec de l''extraction des signatures à partir des fichiers sécurisés
 PROBATIVE_VALUE_EXTRACT_ZIP_FILE.FATAL=Erreur technique lors de la préparation de l''extraction des signatures à partir des fichiers sécurisés
+
+PROBATIVE_VALUE_REPORTS.OK=Succès de la création du rapport de relevé de valeur probante
+PROBATIVE_VALUE_REPORTS.KO=Échec de la création du rapport de relevé de valeur probante
+PROBATIVE_VALUE_REPORTS.FATAL =Erreur technique lors de la création du rapport de relevé de valeur probante
 
 
 STP_PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS=Création du rapport pour chaque unité archivistique ou objet ou groupe d''objet
@@ -2750,7 +2757,7 @@ ELIMINATION_ACTION_FINALIZATION.WARNING=Avertissement lors de la finalisation de
 STP_PREPARATION=Processus de lancement de la préparation du traitement de préservation
 STP_PREPARATION.STARTED=Début du processus de lancement de la préparation du traitement de préservation
 STP_PREPARATION.STARTED.OK=Succès du début du processus de lancement de la préparation du traitement de préservation
-STP_PREPARATION.OK=Succès du processus de lancement de la préparation du traitement de préservation
+STP_PREPARATION.KO=Echec du processus de lancement de la préparation du traitement de préservation
 STP_PREPARATION.FATAL=Erreur technique lors du processus de lancement de la préparation du traitement de préservation
 STP_PREPARATION.WARNING=Avertissement lors du processus de lancement de la préparation du traitement de préservation
 
@@ -2839,4 +2846,4 @@ PRESERVATION_ACCESSION_REGISTRATION.KO=Échec de l''alimentation du registre des
 PRESERVATION_ACCESSION_REGISTRATION.FATAL=Erreur technique lors de l''alimentation du registre des fonds
 PRESERVATION_ACCESSION_REGISTRATION.ALREADY_EXECUTED=Action déjà exécutée : Pas d''alimentation du registre des fonds
 
-IMPORT_PRESERVATION_SCENARIO.KO=Echec du processus d''import du référentiel des scenarios de preservation
+IMPORT_PRESERVATION_SCENARIO.KO=Echec du processus d''import du référentiel des scenarios de préservation
