Fix External Logbook : * some parameters in the master could be set by external : agentIdentifierApplicationSession, agIdExt, objectIdentifierIncome * other parameters should be overloaded, no matter what * masters event type should start with EXT_ * EXTERNAL becomes EXTERNAL_LOGBOOK * in events, eventDateTime wouldnt be overloaded

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -278,8 +278,8 @@ IMPORT_ONTOLOGY.WARNING=Avertissement lors du processus d''import de l''ontologi
 IMPORT_ONTOLOGY.KO=Échec du processus d''import de l''ontologie
 IMPORT_ONTOLOGY.FATAL=Erreur technique lors du processus d''import de l''ontologie
 
-STP_IMPORT_ONTOLOGIES_NOT_AUTHORIZED_FOR_TENANT.KO=Erreur du processus de mise à jour des onthologies: la mise à jour n''est pas autorisée sur le tenant. 
-STP_IMPORT_ONTOLOGIES_UPDATE_INVALID_TYPE.KO=Erreur du processus de mise à jour des onthologies: au moins une valeur ne correspond pas aux valeurs attendues.  
+STP_IMPORT_ONTOLOGIES_NOT_AUTHORIZED_FOR_TENANT.KO=Erreur du processus de mise à jour des ontologies: la mise à jour n''est pas autorisée sur le tenant.
+STP_IMPORT_ONTOLOGIES_UPDATE_INVALID_TYPE.KO=Erreur du processus de mise à jour des ontologies: au moins une valeur ne correspond pas aux valeurs attendues.
 
 CTR_SCHEMA=Processus de contrôle du schéma JSON
 CTR_SCHEMA.OK=Succès du processus de contrôle du schéma JSON
@@ -1703,20 +1703,20 @@ STORE_MANIFEST.OK=Succès de la création du DIP et de son déplacement vers l''
 STORE_MANIFEST.KO=Échec de la création du DIP et de son déplacement vers l''offre de stockage
 STORE_MANIFEST.FATAL=Erreur technique lors de la création du DIP et de son déplacement vers l''offre de stockage
 
-STP_PUT_BINARY_ON_WORKSPACE=Processus de déplacement des objets binaires sur l''offre de stockage vers l''espace de travail interne 
-STP_PUT_BINARY_ON_WORKSPACE.STARTED=Début du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-STP_PUT_BINARY_ON_WORKSPACE.STARTED.OK=Début du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-STP_PUT_BINARY_ON_WORKSPACE.OK=Succès du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-STP_PUT_BINARY_ON_WORKSPACE.KO=Échec du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-STP_PUT_BINARY_ON_WORKSPACE.FATAL=Erreur technique lors du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-STP_PUT_BINARY_ON_WORKSPACE.WARNING=Avertissement lors du processus de déplacement des objets binaires sur l''offre de stockage vers l''espace de travail interne 
+STP_PUT_BINARY_ON_WORKSPACE=Processus de déplacement des objets binaires sur l''offre de stockage vers l''espace de travail interne
+STP_PUT_BINARY_ON_WORKSPACE.STARTED=Début du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+STP_PUT_BINARY_ON_WORKSPACE.STARTED.OK=Début du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+STP_PUT_BINARY_ON_WORKSPACE.OK=Succès du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+STP_PUT_BINARY_ON_WORKSPACE.KO=Échec du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+STP_PUT_BINARY_ON_WORKSPACE.FATAL=Erreur technique lors du processus de déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+STP_PUT_BINARY_ON_WORKSPACE.WARNING=Avertissement lors du processus de déplacement des objets binaires sur l''offre de stockage vers l''espace de travail interne
 
 
-PUT_BINARY_ON_WORKSPACE=Déplacement des objets binaires sur l''offre de stockage vers l''espace de travail interne 
-PUT_BINARY_ON_WORKSPACE.STARTED=Début du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-PUT_BINARY_ON_WORKSPACE.OK=Succès du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-PUT_BINARY_ON_WORKSPACE.KO=Échec du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
-PUT_BINARY_ON_WORKSPACE.FATAL=Erreur technique lors du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne 
+PUT_BINARY_ON_WORKSPACE=Déplacement des objets binaires sur l''offre de stockage vers l''espace de travail interne
+PUT_BINARY_ON_WORKSPACE.STARTED=Début du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+PUT_BINARY_ON_WORKSPACE.OK=Succès du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+PUT_BINARY_ON_WORKSPACE.KO=Échec du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
+PUT_BINARY_ON_WORKSPACE.FATAL=Erreur technique lors du déplacement des objets binaires de l''offre de stockage vers l''espace de travail interne
 
 AUDIT=Audit
 
@@ -2320,12 +2320,12 @@ UNIT_METADATA_UPDATE_CHECK_PERMISSION.KO=Échec de la vérification des droits d
 UNIT_METADATA_UPDATE_CHECK_PERMISSION.FATAL=Erreur technique lors de la vérification des droits de mise à jour des métadonnées des unités archivistiques
 UNIT_METADATA_UPDATE_CHECK_PERMISSION.WARNING=Avertissement lors de la vérification des droits de mise à jour des métadonnées des unités archivistiques
 
-UNIT_METADATA_CHECK_CONSISTENCY=Vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques 
-UNIT_METADATA_CHECK_CONSISTENCY.STARTED=Début de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques 
-UNIT_METADATA_CHECK_CONSISTENCY.OK=Succès de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques 
-UNIT_METADATA_CHECK_CONSISTENCY.KO=Échec de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques 
-UNIT_METADATA_CHECK_CONSISTENCY.FATAL=Erreur technique lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques 
-UNIT_METADATA_CHECK_CONSISTENCY.WARNING=Avertissement lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques 
+UNIT_METADATA_CHECK_CONSISTENCY=Vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
+UNIT_METADATA_CHECK_CONSISTENCY.STARTED=Début de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
+UNIT_METADATA_CHECK_CONSISTENCY.OK=Succès de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
+UNIT_METADATA_CHECK_CONSISTENCY.KO=Échec de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
+UNIT_METADATA_CHECK_CONSISTENCY.FATAL=Erreur technique lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
+UNIT_METADATA_CHECK_CONSISTENCY.WARNING=Avertissement lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
 
 CHECK_DISTRIBUTION_THRESHOLD=Vérification des seuils de limitation de traitement des unités archivistiques
 CHECK_DISTRIBUTION_THRESHOLD.OK=Succès de la vérification des seuils de limitation de traitement des unités archivistiques
@@ -2840,3 +2840,4 @@ PRESERVATION_ACCESSION_REGISTRATION.FATAL=Erreur technique lors de l''alimentati
 PRESERVATION_ACCESSION_REGISTRATION.ALREADY_EXECUTED=Action déjà exécutée : Pas d''alimentation du registre des fonds
 
 IMPORT_PRESERVATION_SCENARIO.KO=Echec du processus d''import du référentiel des scenarios de preservation
+EXTERNAL_LOGBOOK.OK=Journalisation d''événements externes en succès
