bug 5459 - handling error in ATR for multiple object reference in archive unit

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -755,6 +755,9 @@ CHECK_DATAOBJECTPACKAGE.MODIFY_PARENT_EXISTING_UNIT_UNAUTHORIZED.KO=Le rattachem
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.CHECK_MANIFEST_MALFORMED_DATA.KO=Le bordereau de transfert possède une donnée malformée
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_MALFORMED_DATA.KO=Le bordereau de transfert possède une donnée malformée
 
+CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=une unité archivistique référence plus d''un groupe d''objet technique
+CHECK_DATAOBJECTPACKAGE.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=une unité archivistique référence plus d''un groupe d''objet technique
+
 CHECK_DATAOBJECTPACKAGE.EXISTING_OG_NOT_DECLARED.KO=Au moins une unité archivistique déclare un objet à la place du groupe d''objet correspondant
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.EXISTING_OG_NOT_DECLARED.KO=Une unité archivistique déclare un objet à la place du groupe d''objet correspondant
 
