--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2505,6 +2505,20 @@ UNIT_METADATA_UPDATE_CHECK_PERMISSION.KO=Échec de la vérification des droits d
 UNIT_METADATA_UPDATE_CHECK_PERMISSION.FATAL=Erreur technique lors de la vérification des droits de mise à jour des métadonnées des unités archivistiques
 UNIT_METADATA_UPDATE_CHECK_PERMISSION.WARNING=Avertissement lors de la vérification des droits de mise à jour des métadonnées des unités archivistiques
 
+MASS_UPDATE_CHECK=Vérification des droits et des paramètres
+MASS_UPDATE_CHECK.STARTED=Début de la Vérification des droits et des paramètres
+MASS_UPDATE_CHECK.OK=Succès de la Vérification des droits et des paramètres
+MASS_UPDATE_CHECK.KO=Échec de la Vérification des droits et des paramètres
+MASS_UPDATE_CHECK.FATAL=Erreur technique lors de la Vérification des droits et des paramètres
+MASS_UPDATE_CHECK.WARNING=Avertissement lors de la Vérification des droits et des paramètres
+
+MASS_UPDATE_RULES_CHECK=Vérification des droits, des paramètres et du niveau de classification
+MASS_UPDATE_RULES_CHECK.STARTED=Début de la vérification des droits, des paramètres et du niveau de classification
+MASS_UPDATE_RULES_CHECK.OK=Succès de la vérification des droits, des paramètres et du niveau de classification
+MASS_UPDATE_RULES_CHECK.KO=Échec de la vérification des droits, des paramètres et du niveau de classification
+MASS_UPDATE_RULES_CHECK.FATAL=Erreur technique lors de la vérification des droits, des paramètres et du niveau de classification
+MASS_UPDATE_RULES_CHECK.WARNING=Avertissement lors de la vérification des droits, des paramètres et du niveau de classification
+
 UNIT_METADATA_CHECK_CONSISTENCY=Vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
 UNIT_METADATA_CHECK_CONSISTENCY.STARTED=Début de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
 UNIT_METADATA_CHECK_CONSISTENCY.OK=Succès de la vérification de cohérence des actions lors de la mise à jour des métadonnées de gestion des unités archivistiques
