Bug #5632 : generate evidence audit report using batch report module

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2227,6 +2227,7 @@ EVIDENCE_AUDIT_FINALIZE.WARNING=Avertissement lors de la création du rapport de
 EVIDENCE_AUDIT_FINALIZE.FATAL=une Erreur technique est survenue lors de la création du rapport d''audit de cohérence
 
 RECTIFICATION_AUDIT=Processus d''audit correctif modifié
+RECTIFICATION_AUDIT.STARTED=Début du processus d''audit correctif modifié
 RECTIFICATION_AUDIT.OK=Succès du processus d''audit correctif modifié
 RECTIFICATION_AUDIT.KO=Échec du processus d''audit correctif modifié
 RECTIFICATION_AUDIT.WARNING=Avertissement lors du processus d''audit correctif modifié
